--- a/client/build.gradle
+++ b/client/build.gradle
@@ -18,6 +18,10 @@ dependencies {
 	implementation 'org.apache.httpcomponents:httpclient:4.5.13'
 	annotationProcessor 'org.projectlombok:lombok'
 	compileOnly 'org.projectlombok:lombok'
+	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.5.8'
+	implementation group: 'io.github.classgraph', name: 'classgraph', version: '4.8.157'
+	implementation group: 'org.webjars', name: 'webjars-locator', version: '0.46'
+	testImplementation 'io.projectreactor:reactor-test'
 
 }
 
